--- a/app/src/main/res/layout/mention.xml
+++ b/app/src/main/res/layout/mention.xml
@@ -55,7 +55,8 @@
             android:layout_height="30dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:background="@drawable/readshape" />
+            android:background="@drawable/readshape"
+            android:visibility="invisible" />
 
 
         <TextView
