--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/llayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,4 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"></ListView>
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/internetalert"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:layout_centerInParent="true"
+        android:background="@color/black"
+        android:gravity="center"
+        android:text="@string/notonline"
+        android:textColor="@color/red"
+        android:visibility="invisible" />
+
+</RelativeLayout>
