--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,6 +3,7 @@
 
     <color name="lightgray">#ffa19e9a</color>
     <color name="darkgray">#ff787170</color>
-    <color name="black">#ff000000</color>
+    <color name="black">#ff303030</color>
+    <color name="red">#FFBC0E32</color>
 
 </resources>
